--- a/Blogger/src/Presentation/Blogger-SPA/src/app/layout/header/header.component.html
+++ b/Blogger/src/Presentation/Blogger-SPA/src/app/layout/header/header.component.html
@@ -17,7 +17,7 @@
                         <a class="nav-link" href="#">Categories</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  (click)="open()">Create</a>
+                        <a class="nav-link" (click)="open('autofocus')">Create</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/article/list">Blog</a>
