feature/Create-article

--- a/Blogger/src/Presentation/Blogger-SPA/src/app/modules/article/article-form/article.component.html
+++ b/Blogger/src/Presentation/Blogger-SPA/src/app/modules/article/article-form/article.component.html
@@ -17,9 +17,11 @@
                 </p>
             </div>
             <div class="card-body__meta">
-                <span class="card-body__meta-links" *ngFor="let hashtag of article.hashtags">
-                    <a href="category.html">{{hashtag}}</a>
-                </span>
+                <a *ngFor="let hashtag of article.hashtags" 
+                    class="card-body__meta-links" 
+                    href="category.html">
+                    {{hashtag}}
+                </a>
             </div>
         </div>
     </article>
