--- a/Blogger/src/Presentation/Blogger-SPA/src/assets/theme/resources/sass/main.scss
+++ b/Blogger/src/Presentation/Blogger-SPA/src/assets/theme/resources/sass/main.scss
@@ -1,5 +1,6 @@
 @import "abstracts/variables";
 @import "pages/article-list";
+@import "pages/article-form";
 @import "pages/create-article";
 @import "layout/header";
 
